Added doping Hatsugai-Kohmoto

--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -1162,17 +1162,20 @@ This result is identical to performing the mean-field decoupling in momentum spa
 and exploiting momentum conservation, i.e. 
 $\langle c^{\dagger}_{k-q,\sigma}c_{k\sigma} \rangle = \delta(q) \langle c^{\dagger}_{k\sigma}c_{k\sigma} \rangle$.
 
-This Hamiltonian preserves translational invariance, but breaks particle-hole symmetry.
+This Hamiltonian preserves translational invariance. If we solve it at every k-point,
+even in a cluster approach, translational symmetry will not be broken.
 
 \subsection{1D Hubbard model example}
 1D Hubbard chain, $U=4$, $t=1$, $T=0$, exact diagonalization
 
 \includegraphics[width=1\textwidth]{HatsugaiKohmoto/1D_HK.pdf}
 
-\subsection{1D Hubbard model example}
+\subsection{2D Hubbard model example}
 2D Hubbard square lattice, $U=4$, $t=1$, $T=0$, exact diagonalization
 
 \includegraphics[width=1\textwidth]{HatsugaiKohmoto/2D_HK.pdf}
+
+\includegraphics[width=1\textwidth]{HatsugaiKohmoto/2D_HK_doping.pdf}
 
 \clearpage
 
